exports[`invalid(1): {\"dependencies\": {\"foo\": \"1.0.0-alpha.1\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "1.0.0-alpha.1"}}

`;

exports[`invalid(1): {\"dependencies\": {\"foo\": \"1.0.0-alpha.1\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "1.0.0-alpha.1"}}
    |                          ^^^^^^^^^^^^^^^ Dependency \`foo\` targets a pre-release version \`1.0.0-alpha.1\`.

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"^1.0.0-beta.2\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.0.0-beta.2"}}

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"^1.0.0-beta.2\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0-beta.2"}}
    |                          ^^^^^^^^^^^^^^^ Dependency \`foo\` targets a pre-release version \`^1.0.0-beta.2\`.

`;

exports[`invalid(3): {\"dependencies\": {\"foo\": \"~2.0.0-rc.1\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "~2.0.0-rc.1"}}

`;

exports[`invalid(3): {\"dependencies\": {\"foo\": \"~2.0.0-rc.1\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "~2.0.0-rc.1"}}
    |                          ^^^^^^^^^^^^^ Dependency \`foo\` targets a pre-release version \`~2.0.0-rc.1\`.

`;

exports[`invalid(4): {\"devDependencies\": {\"foo\": \"^1.0.0-alpha.1\"}} 1`] = `

[Input]
  1 | {"devDependencies": {"foo": "^1.0.0-alpha.1"}}

`;

exports[`invalid(4): {\"devDependencies\": {\"foo\": \"^1.0.0-alpha.1\"}} 2`] = `

Message:
> 1 | {"devDependencies": {"foo": "^1.0.0-alpha.1"}}
    |                             ^^^^^^^^^^^^^^^^ Dependency \`foo\` targets a pre-release version \`^1.0.0-alpha.1\`.

`;

exports[`invalid(5): {\"peerDependencies\": {\"foo\": \"1.0.0-alpha.1\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "1.0.0-alpha.1"}}

`;

exports[`invalid(5): {\"peerDependencies\": {\"foo\": \"1.0.0-alpha.1\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "1.0.0-alpha.1"}}
    |                              ^^^^^^^^^^^^^^^ Dependency \`foo\` targets a pre-release version \`1.0.0-alpha.1\`.

`;

exports[`invalid(6): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0-next.1\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0-next.1"}}

`;

exports[`invalid(6): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0-next.1\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0-next.1"}}
    |                                           ^^^^^^^^^^^^^^^ Dependency \`bar\` targets a pre-release version \`^2.0.0-next.1\`.

`;

exports[`invalid(7): {\"dependencies\": {\"foo\": \">=1.0.0-alpha <2.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": ">=1.0.0-alpha <2.0.0"}}

`;

exports[`invalid(7): {\"dependencies\": {\"foo\": \">=1.0.0-alpha <2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": ">=1.0.0-alpha <2.0.0"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^ Dependency \`foo\` targets a pre-release version \`>=1.0.0-alpha <2.0.0\`.

`;
